[gd_scene load_steps=8 format=2]

[ext_resource path="res://TitleMenu.gd" type="Script" id=1]
[ext_resource path="res://Font/Copse_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://SceneTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Barkelona Logo Color.png" type="Texture" id=4]
[ext_resource path="res://NPCs/Portraits/Carlos Segundo.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "PopUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CarlosSegundo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 163, 690 ), Vector2( 163, 412 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CarlosSegundo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 163, 412 ) ]
}

[node name="Background" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.290196, 0.839216, 0.819608, 1 )
script = ExtResource( 1 )

[node name="BarkelonaLogoColor" type="Sprite" parent="."]
position = Vector2( 490, 116 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="CarlosSegundo" type="Sprite" parent="."]
position = Vector2( 163, 412 )
texture = ExtResource( 5 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -54.0
margin_right = 135.0
margin_bottom = 226.0

[node name="StartButton" type="ToolButton" parent="GridContainer"]
margin_right = 254.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "New Game"

[node name="LoadButton" type="ToolButton" parent="GridContainer"]
margin_top = 71.0
margin_right = 254.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 2 )
text = "Load Game"

[node name="PracticeButton" type="ToolButton" parent="GridContainer"]
margin_top = 142.0
margin_right = 254.0
margin_bottom = 209.0
custom_fonts/font = ExtResource( 2 )
text = "Practice"

[node name="QuitButton" type="ToolButton" parent="GridContainer"]
margin_top = 213.0
margin_right = 254.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="SceneTransition" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CreditsButton" type="ToolButton" parent="."]
margin_left = 698.0
margin_top = 312.0
margin_right = 867.0
margin_bottom = 379.0
custom_fonts/font = ExtResource( 2 )
text = "Credits"

[node name="LoadDialog" type="FileDialog" parent="."]
margin_left = 148.0
margin_top = 115.0
margin_right = 769.0
margin_bottom = 436.0
window_title = "Open a File"
mode = 0
access = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PopUp = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="VersionLabel" type="RichTextLabel" parent="."]
margin_left = 916.0
margin_top = 518.0
margin_right = 956.0
margin_bottom = 558.0
text = "v1.3.0"

[connection signal="pressed" from="GridContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="GridContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="GridContainer/PracticeButton" to="." method="_on_PracticeButton_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_LoadDialog_file_selected"]
